@@ -1,32 +1,28 @@
 package com.example.chat.security;
 
-import com.example.chat.model.User;
 import com.example.chat.repository.UserRepository;
-import java.util.List;
+import java.util.Collections;
 import lombok.AllArgsConstructor;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
+import org.springframework.security.core.userdetails.ReactiveUserDetailsService;
 import org.springframework.security.core.userdetails.UserDetails;
-import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
+import reactor.core.publisher.Mono;
 
 @Service
 @AllArgsConstructor
-public class CustomUserDetailsService implements UserDetailsService {
+public class CustomUserDetailsService implements ReactiveUserDetailsService {
 
     private final UserRepository userRepository;
 
     @Override
-    public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
-        User user = userRepository.findByUsername(username)
-                .orElseThrow(() ->
-                        new UsernameNotFoundException("User not found with username or email: " + username));
-
-        return new org.springframework.security.core.userdetails.User(user.getUsername(),
-                user.getPassword(),
-                //for simplicity
-                List.of(new SimpleGrantedAuthority("ADMIN"))
-        );
+    public Mono<UserDetails> findByUsername(String username) {
+        return Mono.just(userRepository.findByUsername(username))
+                .switchIfEmpty(Mono.error(new UsernameNotFoundException("User not found with username: " + username)))
+                .map(user -> new org.springframework.security.core.userdetails.User(
+                        user.get().getUsername(),
+                        user.get().getPassword(),
+                        Collections.singletonList(new SimpleGrantedAuthority("ROLE_USER"))));
     }
 }
